myproject/force-app/main/default/objects/Task_Followup__c/Task_Followup__c.object-meta.xml
<CustomObject>
    <label>Task Followup</label>
    <nameField>
        <label>Task Followup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Followups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>