myproject/force-app/main/default/objects/Task_Followup__c/fields/Master_Finished__c.field-meta.xml
<CustomField>
    <fullName>Master_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Finished</label>
    <type>Checkbox</type>
</CustomField>