myproject/force-app/main/default/objects/Task_Followup__c/fields/MasterTask__c.field-meta.xml
<CustomField>
    <fullName>MasterTask__c</fullName>
    <label>MasterTask</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Task Followups</relationshipLabel>
    <relationshipName>Task_Followups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>