myproject/force-app/main/default/objects/Task_Followup__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Task Followups</relationshipLabel>
    <relationshipName>Task_Followups</relationshipName>
    <type>Lookup</type>
</CustomField>